fixed spacing for post

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -171,12 +171,17 @@ section {
     transform: none;
   }
 }
+
 ul {
   list-style: none;
 
   li {
     margin: 5px 0;
   }
+}
+
+#post {
+  padding: 10px 20px;
 }
 
 @media screen and (max-width: 850px) {
